--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
-body{
-  background-color: yellow;
+
+#flexContainer{
+  border: 2px solid blue;
+  padding: 50px;
+  margin-top: 50px;
+
+}
+
+h1 {
+text-align: center;
+}
+
+.heading {
+  margin-top: 50px;
+  text-transform:uppercase;
+  font-size:26px; letter-spacing:1px;
+  font-size: 50px;
+
+
 }
